# SNNJepa

./: .gitignore  CMakeLists.txt  LICENSE  README.md
configs/: cifar10_retina_bilateral_natural_features_experimental.sonata.json  emnist_retina_bilateral_experimental.sonata.json  mnist_retina_bilateral_experimental.sonata.json
docs/: ARCHITECTURE.md  BASELINES.md  DEVELOPMENT.md  DOCUMENTATION_INDEX.md  JEPA_DESIGN_PASS.md  JEPA_IMPLEMENTATION_CHECKLIST.md  JEPA_ROADMAP.md  JEPA_STATUS.md  NEXT_STEPS.md  REPO_LAYOUT.md  RabbitHoles.md
experiments/: CMakeLists.txt  retina_classification.cpp
include/snnfw/: ActivityMonitor.cpp  ActivityMonitor.h  ActivityVisualizer.h  BinaryPattern.cpp  CMakeLists.txt  Camera.cpp  ConnectivityPattern.cpp  ConnectivityPattern.h  Dendrite.h  LayoutEngine.h  MemoryManager.h  NetworkDataAdapter.h  NetworkGraphRenderer.cpp  NetworkGraphRenderer.h  NetworkInspector.h  NetworkPropagator.h  NetworkStructureExporter.h  NeuralObjectFactory.cpp  Neuron.h  PlaybackControls.cpp  PlaybackControls.h  RecordingManager.cpp  RecordingManager.h  SimulationConfig.h  SpikeProcessor.cpp  SpikeProcessor.h  VisualizationManager.h
include/snnfw/adapters/: EMNISTAdapter.cpp  EMNISTAdapter.h  InterneuronAdapters.cpp  InterneuronAdapters.h  README.md  RetinaAdapter.h  SensoryAdapter.h
include/snnfw/classification/: ClassificationStrategy.h  HierarchicalKNN.cpp  HierarchicalKNN.h
include/snnfw/declarative/: DeclarativeLoader.h  FormatParser.h  HOCParser.h  NativeJSONParser.cpp  NativeJSONParser.h  NetworkConstructor.cpp  NetworkConstructor.h  NetworkIR.cpp  NetworkIR.h  NeuroMLParser.h  SONATAParser.cpp  SONATAParser.h
include/snnfw/domain/: VisualDomainAdapter.h
include/snnfw/experiment/: CompetitionManager.cpp  CompetitionManager.h  ExperimentConfig.h  ExperimentRunner.cpp  ExperimentRunner.h  KNNClassifier.h  SpikeEncoder.cpp  SpikeEncoder.h  SupervisedTeacher.cpp  SupervisedTeacher.h  TrainingPipeline.cpp  TrainingPipeline.h
include/snnfw/features/: EdgeOperator.h  GaborOperator.cpp  GaborOperator.h  OrientationEnergyOperator.h  QuadratureGaborOperator.cpp  QuadratureGaborOperator.h
include/snnfw/jepa/: JepaConfig.h  JepaLoss.h  JepaMaskSampler.cpp  JepaMaskSampler.h  JepaSample.h  JepaStateExtractor.cpp  JepaStateExtractor.h  JepaTrainer.cpp  JepaTrainer.h
include/snnfw/learning/: HybridStrategy.cpp
scripts/: run_cifar10_retina_bilateral.sh  run_cifar10_retina_bilateral_natural.sh  run_emnist_retina_bilateral.sh  run_mnist_retina_bilateral.sh
shaders/: spike_particle.vert
src/: ActivityVisualizer.cpp  CMakeLists.txt  ConnectivityBuilder.cpp  Dendrite.cpp  LayoutEngine.cpp  MemoryManager.cpp  NetworkDataAdapter.cpp  NetworkInspector.cpp  NetworkPropagator.cpp  NetworkStructureExporter.cpp  Neuron.cpp  SpikeRenderer.cpp  VisualizationManager.cpp
src/adapters/: RetinaAdapter.cpp
src/classification/: ClassificationStrategyFactory.cpp
src/declarative/: DeclarativeLoader.cpp  HOCParser.cpp  NeuroMLParser.cpp
src/domain/: VisualDomainAdapter.cpp
src/experiment/: KNNClassifier.cpp
src/features/: EdgeOperatorFactory.cpp  OrientationEnergyOperator.cpp
src/learning/: AppendStrategy.cpp
